--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-loading-skeleton": "^2.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "typescript": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
