--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-loading-skeleton": "^2.2.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "styled-components": "^5.3.1",
     "typescript": "^5.0.3"
   },
