--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "lint": "eslint . --fix"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "prettier"
     ]
   },
   "browserslist": {
@@ -52,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.7",
     "react-svg-loader": "^3.0.3"
   }
