--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.7",
     "react-svg-loader": "^3.0.3"
