--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jotai": "^1.3.4",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
+    "peerjs": "^1.4.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
